Implement pos_tagger
pos_tagger uses previously implemented deep_lstm as its core lstm module.
So far only the implementation of operations has been tested. Loss
and accuracy measurements hasn't been implemented.

--- a/code.ipynb
+++ b/code.ipynb
@@ -240,19 +240,29 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": 8,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "train_iter, val_iter, test_iter = udpos.get_iterators()"
-   ]
-  },
-  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
     "Let's see what the iterator looks like."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "torch.Size([62, 64]) torch.Size([62, 64])\n"
+     ]
+    }
+   ],
+   "source": [
+    "for batch in udpos.train_dataloader():\n",
+    "    print(batch[0].shape, batch[1].shape)\n",
+    "    break"
    ]
   },
   {
@@ -264,16 +274,13 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "\n",
-      "[torchtext.data.batch.Batch of size 64 from UDPOS]\n",
-      "\t[.text]:[torch.LongTensor of size 91x64]\n",
-      "\t[.udtags]:[torch.LongTensor of size 91x64]\n"
+      "torch.Size([1, 64]) torch.Size([1, 64])\n"
      ]
     }
    ],
    "source": [
-    "for batch in train_iter:\n",
-    "    print(batch)\n",
+    "for batch in udpos.val_dataloader():\n",
+    "    print(batch[0].shape, batch[1].shape)\n",
     "    break"
    ]
   },
@@ -281,9 +288,9 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Each batch has two fields, `text` and `udtags`. The shape of both the fields is $65 \\times 64$. Here's what this means:\n",
+    "Each batch has two objects containing `text` and `udtags`. The shape of both the fields is $x \\times 64$. Here's what this means:\n",
     "\n",
-    "* **Number of steps**: 65. Meaning, there are 65 sequential tokens. \n",
+    "* **Number of steps**: x. Meaning, there are x sequential tokens. \n",
     "* **Batches**: 64. Meaning, there are 64 different sequences.\n",
     "\n",
     "Let's look at a breakdown of one row."
@@ -298,14 +305,14 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Text: if anyone has any questions or concerns about the timing of these payments , please give me a call . <pad> <pad> <pad> <pad> <pad> <pad> <pad> <pad> <pad> <pad> <pad> <pad> <pad> <pad> <pad> <pad> <pad> <pad> <pad> <pad> <pad> <pad> <pad> <pad> <pad> <pad> <pad> <pad> <pad> <pad> <pad> <pad> <pad> <pad> <pad> <pad> <pad> <pad> <pad> <pad>\n",
-      "Tags: SCONJ PRON VERB DET NOUN CCONJ NOUN ADP DET NOUN ADP DET NOUN PUNCT INTJ VERB PRON DET NOUN PUNCT <pad> <pad> <pad> <pad> <pad> <pad> <pad> <pad> <pad> <pad> <pad> <pad> <pad> <pad> <pad> <pad> <pad> <pad> <pad> <pad> <pad> <pad> <pad> <pad> <pad> <pad> <pad> <pad> <pad> <pad> <pad> <pad> <pad> <pad> <pad> <pad> <pad> <pad> <pad> <pad>\n"
+      "Text: david the crackdown some i what if however mhc i the there as i perhaps i the are they a 87 with have zawahiri for phyllis look he but interviewers sara $ thank after i have unfortunately the there <unk> after if maybe on <unk> lay if let i all instead well my please and <unk> the change a steve do usually highly how\n",
+      "Tags: PROPN DET NOUN DET PRON PRON SCONJ ADV PROPN PRON DET PRON SCONJ PRON ADV PRON DET VERB PRON DET NUM ADP VERB PROPN ADP PROPN VERB PRON CCONJ NOUN PROPN SYM VERB ADP PRON AUX ADV DET PRON VERB ADP SCONJ ADV ADP NUM VERB SCONJ VERB PRON DET ADV INTJ PRON INTJ CCONJ X DET VERB DET PROPN AUX ADV ADV ADV\n"
      ]
     }
    ],
    "source": [
-    "for batch in train_iter:\n",
-    "    text, tags = batch.text.T, batch.udtags.T\n",
+    "for batch in udpos.train_dataloader():\n",
+    "    text, tags = batch\n",
     "\n",
     "    print(\"Text:\", \" \".join(udpos.TEXT.vocab.itos[i]\n",
     "                            for i in text[0]))\n",
@@ -379,7 +386,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "lstm = LSTM(num_inputs=EMBEDDING_DIM, num_hiddens=HIDDEN_DIM)"
+    "model = LSTM(num_inputs=EMBEDDING_DIM, num_hiddens=HIDDEN_DIM)"
    ]
   },
   {
@@ -410,7 +417,7 @@
    "source": [
     "print(\"List of parameters making up the LSTM model\")\n",
     "\n",
-    "for name, params in lstm.named_parameters():\n",
+    "for name, params in model.named_parameters():\n",
     "    print(f\"{name:<5} with shape {params.shape}\")"
    ]
   },
@@ -421,7 +428,7 @@
    "outputs": [],
    "source": [
     "dummy_inputs = torch.randn((65, BATCH_SIZE, EMBEDDING_DIM))\n",
-    "outputs, (H, C) = lstm(dummy_inputs)"
+    "outputs, (H, C) = model(dummy_inputs)"
    ]
   },
   {
@@ -474,7 +481,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "bi_lstm = BiLSTM(num_inputs=EMBEDDING_DIM, num_hiddens=HIDDEN_DIM)"
+    "model = BiLSTM(num_inputs=EMBEDDING_DIM, num_hiddens=HIDDEN_DIM)"
    ]
   },
   {
@@ -517,7 +524,7 @@
    "source": [
     "print(\"List of parameters making up the LSTM model\")\n",
     "\n",
-    "for name, params in bi_lstm.named_parameters():\n",
+    "for name, params in model.named_parameters():\n",
     "    print(f\"{name:<20} with shape {params.shape}\")"
    ]
   },
@@ -527,7 +534,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "outputs, (f_h, b_h) = bi_lstm(dummy_inputs)"
+    "outputs, (f_h, b_h) = model(dummy_inputs)"
    ]
   },
   {
@@ -584,10 +591,10 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "deep_lstm = DeepLSTM(num_inputs=EMBEDDING_DIM,\n",
-    "                     num_hiddens=HIDDEN_DIM,\n",
-    "                     num_layers=NUM_LAYERS,\n",
-    "                     bidirectional=False)"
+    "model = DeepLSTM(num_inputs=EMBEDDING_DIM,\n",
+    "                 num_hiddens=HIDDEN_DIM,\n",
+    "                 num_layers=NUM_LAYERS,\n",
+    "                 bidirectional=False)"
    ]
   },
   {
@@ -630,7 +637,7 @@
    "source": [
     "print(\"List of parameters making up the LSTM model\")\n",
     "\n",
-    "for name, params in deep_lstm.named_parameters():\n",
+    "for name, params in model.named_parameters():\n",
     "    print(f\"{name:<20} with shape {params.shape}\")"
    ]
   },
@@ -640,7 +647,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "outputs, Hs = deep_lstm(dummy_inputs)"
+    "outputs, Hs = model(dummy_inputs)"
    ]
   },
   {
@@ -677,19 +684,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 28,
    "metadata": {},
    "outputs": [],
    "source": [
-    "deep_lstm = DeepLSTM(num_inputs=EMBEDDING_DIM,\n",
-    "                     num_hiddens=HIDDEN_DIM,\n",
-    "                     num_layers=NUM_LAYERS,\n",
-    "                     bidirectional=True)"
+    "model = DeepLSTM(num_inputs=EMBEDDING_DIM,\n",
+    "                 num_hiddens=HIDDEN_DIM,\n",
+    "                 num_layers=NUM_LAYERS,\n",
+    "                 bidirectional=True)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": 29,
    "metadata": {},
    "outputs": [
     {
@@ -744,77 +751,29 @@
       "layers.1.backward_lstm.b_o with shape torch.Size([128])\n",
       "layers.1.backward_lstm.W_xc with shape torch.Size([256, 128])\n",
       "layers.1.backward_lstm.W_hc with shape torch.Size([128, 128])\n",
-      "layers.1.backward_lstm.b_c with shape torch.Size([128])\n",
-      "layers.2.forward_lstm.W_xf with shape torch.Size([256, 128])\n",
-      "layers.2.forward_lstm.W_hf with shape torch.Size([128, 128])\n",
-      "layers.2.forward_lstm.b_f with shape torch.Size([128])\n",
-      "layers.2.forward_lstm.W_xi with shape torch.Size([256, 128])\n",
-      "layers.2.forward_lstm.W_hi with shape torch.Size([128, 128])\n",
-      "layers.2.forward_lstm.b_i with shape torch.Size([128])\n",
-      "layers.2.forward_lstm.W_xo with shape torch.Size([256, 128])\n",
-      "layers.2.forward_lstm.W_ho with shape torch.Size([128, 128])\n",
-      "layers.2.forward_lstm.b_o with shape torch.Size([128])\n",
-      "layers.2.forward_lstm.W_xc with shape torch.Size([256, 128])\n",
-      "layers.2.forward_lstm.W_hc with shape torch.Size([128, 128])\n",
-      "layers.2.forward_lstm.b_c with shape torch.Size([128])\n",
-      "layers.2.backward_lstm.W_xf with shape torch.Size([256, 128])\n",
-      "layers.2.backward_lstm.W_hf with shape torch.Size([128, 128])\n",
-      "layers.2.backward_lstm.b_f with shape torch.Size([128])\n",
-      "layers.2.backward_lstm.W_xi with shape torch.Size([256, 128])\n",
-      "layers.2.backward_lstm.W_hi with shape torch.Size([128, 128])\n",
-      "layers.2.backward_lstm.b_i with shape torch.Size([128])\n",
-      "layers.2.backward_lstm.W_xo with shape torch.Size([256, 128])\n",
-      "layers.2.backward_lstm.W_ho with shape torch.Size([128, 128])\n",
-      "layers.2.backward_lstm.b_o with shape torch.Size([128])\n",
-      "layers.2.backward_lstm.W_xc with shape torch.Size([256, 128])\n",
-      "layers.2.backward_lstm.W_hc with shape torch.Size([128, 128])\n",
-      "layers.2.backward_lstm.b_c with shape torch.Size([128])\n",
-      "layers.3.forward_lstm.W_xf with shape torch.Size([256, 128])\n",
-      "layers.3.forward_lstm.W_hf with shape torch.Size([128, 128])\n",
-      "layers.3.forward_lstm.b_f with shape torch.Size([128])\n",
-      "layers.3.forward_lstm.W_xi with shape torch.Size([256, 128])\n",
-      "layers.3.forward_lstm.W_hi with shape torch.Size([128, 128])\n",
-      "layers.3.forward_lstm.b_i with shape torch.Size([128])\n",
-      "layers.3.forward_lstm.W_xo with shape torch.Size([256, 128])\n",
-      "layers.3.forward_lstm.W_ho with shape torch.Size([128, 128])\n",
-      "layers.3.forward_lstm.b_o with shape torch.Size([128])\n",
-      "layers.3.forward_lstm.W_xc with shape torch.Size([256, 128])\n",
-      "layers.3.forward_lstm.W_hc with shape torch.Size([128, 128])\n",
-      "layers.3.forward_lstm.b_c with shape torch.Size([128])\n",
-      "layers.3.backward_lstm.W_xf with shape torch.Size([256, 128])\n",
-      "layers.3.backward_lstm.W_hf with shape torch.Size([128, 128])\n",
-      "layers.3.backward_lstm.b_f with shape torch.Size([128])\n",
-      "layers.3.backward_lstm.W_xi with shape torch.Size([256, 128])\n",
-      "layers.3.backward_lstm.W_hi with shape torch.Size([128, 128])\n",
-      "layers.3.backward_lstm.b_i with shape torch.Size([128])\n",
-      "layers.3.backward_lstm.W_xo with shape torch.Size([256, 128])\n",
-      "layers.3.backward_lstm.W_ho with shape torch.Size([128, 128])\n",
-      "layers.3.backward_lstm.b_o with shape torch.Size([128])\n",
-      "layers.3.backward_lstm.W_xc with shape torch.Size([256, 128])\n",
-      "layers.3.backward_lstm.W_hc with shape torch.Size([128, 128])\n",
-      "layers.3.backward_lstm.b_c with shape torch.Size([128])\n"
+      "layers.1.backward_lstm.b_c with shape torch.Size([128])\n"
      ]
     }
    ],
    "source": [
     "print(\"List of parameters making up the LSTM model\")\n",
     "\n",
-    "for name, params in deep_lstm.named_parameters():\n",
+    "for name, params in model.named_parameters():\n",
     "    print(f\"{name:<20} with shape {params.shape}\")"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": 30,
    "metadata": {},
    "outputs": [],
    "source": [
-    "outputs, Hs = deep_lstm(dummy_inputs)"
+    "outputs, Hs = model(dummy_inputs)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 41,
+   "execution_count": 31,
    "metadata": {},
    "outputs": [
     {
@@ -829,15 +788,7 @@
       "Layer 2: Shape of Forward Hidden State: torch.Size([64, 128])\n",
       "Layer 2: Shape of Forward Memory Cell: torch.Size([64, 128])\n",
       "Layer 2: Shape of Forward Hidden State: torch.Size([64, 128])\n",
-      "Layer 2: Shape of Forward Memory Cell: torch.Size([64, 128])\n",
-      "Layer 3: Shape of Forward Hidden State: torch.Size([64, 128])\n",
-      "Layer 3: Shape of Forward Memory Cell: torch.Size([64, 128])\n",
-      "Layer 3: Shape of Forward Hidden State: torch.Size([64, 128])\n",
-      "Layer 3: Shape of Forward Memory Cell: torch.Size([64, 128])\n",
-      "Layer 4: Shape of Forward Hidden State: torch.Size([64, 128])\n",
-      "Layer 4: Shape of Forward Memory Cell: torch.Size([64, 128])\n",
-      "Layer 4: Shape of Forward Hidden State: torch.Size([64, 128])\n",
-      "Layer 4: Shape of Forward Memory Cell: torch.Size([64, 128])\n"
+      "Layer 2: Shape of Forward Memory Cell: torch.Size([64, 128])\n"
      ]
     }
    ],
@@ -849,6 +800,72 @@
     "    print(f\"Layer {i+1}: Shape of Forward Memory Cell:\", h[0][1].shape)\n",
     "    print(f\"Layer {i+1}: Shape of Forward Hidden State:\", h[1][0].shape)\n",
     "    print(f\"Layer {i+1}: Shape of Forward Memory Cell:\", h[1][1].shape)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### 2.5. POS Tagger"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 32,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from src.module.pos_tagger import PosTagger"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 35,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "d:\\Projects\\POS_Tagging\\venv\\lib\\site-packages\\torch\\nn\\modules\\lazy.py:180: UserWarning: Lazy modules are a new feature under heavy development so changes to the API or functionality can happen at any moment.\n",
+      "  warnings.warn('Lazy modules are a new feature under heavy development '\n"
+     ]
+    }
+   ],
+   "source": [
+    "model = PosTagger(num_inputs=len(udpos.TEXT.vocab),\n",
+    "                  embedding_dim=100,\n",
+    "                  num_hiddens=128,\n",
+    "                  num_outputs=len(udpos.UD_TAGS.vocab),\n",
+    "                  bidirectional=True,\n",
+    "                  num_layers=2,\n",
+    "                  padding_idx=udpos.TEXT.vocab[udpos.TEXT.pad_token])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 36,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Features.shape: torch.Size([41, 64])\n",
+      "Labels.shape: torch.Size([41, 64])\n",
+      "Predictions.shape: torch.Size([41, 64, 18])\n"
+     ]
+    }
+   ],
+   "source": [
+    "for batch in udpos.train_dataloader():\n",
+    "    X, y = batch\n",
+    "    y_hat = model(X)\n",
+    "    \n",
+    "    print(f\"Features.shape: {X.shape}\")\n",
+    "    print(f\"Labels.shape: {y.shape}\")\n",
+    "    print(f\"Predictions.shape: {y_hat.shape}\")\n",
+    "    break"
    ]
   },
   {
