Implement pos_tagger loss and accuracy
Added loss and accuracy calculation functions.
Also added optimizer to pos_tagger.

--- a/code.ipynb
+++ b/code.ipynb
@@ -255,7 +255,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "torch.Size([62, 64]) torch.Size([62, 64])\n"
+      "torch.Size([44, 64]) torch.Size([44, 64])\n"
      ]
     }
    ],
@@ -305,8 +305,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Text: david the crackdown some i what if however mhc i the there as i perhaps i the are they a 87 with have zawahiri for phyllis look he but interviewers sara $ thank after i have unfortunately the there <unk> after if maybe on <unk> lay if let i all instead well my please and <unk> the change a steve do usually highly how\n",
-      "Tags: PROPN DET NOUN DET PRON PRON SCONJ ADV PROPN PRON DET PRON SCONJ PRON ADV PRON DET VERB PRON DET NUM ADP VERB PROPN ADP PROPN VERB PRON CCONJ NOUN PROPN SYM VERB ADP PRON AUX ADV DET PRON VERB ADP SCONJ ADV ADP NUM VERB SCONJ VERB PRON DET ADV INTJ PRON INTJ CCONJ X DET VERB DET PROPN AUX ADV ADV ADV\n"
+      "Text: who ( thus she fear same ironically the <unk> hope rent best jen 1 as because nice i harry the we the they my enrononline perfect teresa ‘’ the 46 03/21/2001 ( i maybe do this he change i the hi ok <unk> my it what from it 30 also are if i 01/26/2001 i if as i our if after debbie and these\n",
+      "Tags: PRON PUNCT ADV PRON NOUN ADJ ADV DET NUM VERB VERB ADJ PROPN X ADV SCONJ ADJ PRON PROPN DET PRON DET PRON PRON PROPN ADJ PROPN PUNCT DET NUM NUM PUNCT PRON ADV AUX PRON PRON VERB PRON DET INTJ INTJ NUM PRON PRON PRON ADP PRON NUM ADV AUX SCONJ PRON NUM PRON SCONJ ADP PRON PRON SCONJ ADP PROPN CCONJ DET\n"
      ]
     }
    ],
@@ -820,7 +820,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 33,
    "metadata": {},
    "outputs": [
     {
@@ -844,16 +844,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 35,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Features.shape: torch.Size([41, 64])\n",
-      "Labels.shape: torch.Size([41, 64])\n",
-      "Predictions.shape: torch.Size([41, 64, 18])\n"
+      "Features.shape: torch.Size([50, 64])\n",
+      "Labels.shape: torch.Size([50, 64])\n",
+      "Predictions.shape: torch.Size([50, 64, 18])\n",
+      "Loss: 2.8818650245666504\n",
+      "Accuracy: 0.0032959789969027042\n"
      ]
     }
    ],
@@ -865,6 +867,16 @@
     "    print(f\"Features.shape: {X.shape}\")\n",
     "    print(f\"Labels.shape: {y.shape}\")\n",
     "    print(f\"Predictions.shape: {y_hat.shape}\")\n",
+    "    \n",
+    "    y_hat = y_hat.reshape(-1, y_hat.shape[-1])\n",
+    "    y = y.reshape(-1)\n",
+    "    \n",
+    "    loss = model.loss(y_hat, y)\n",
+    "    acc = model.accuracy(y_hat, y)\n",
+    "    \n",
+    "    print(f\"Loss: {loss.item()}\")\n",
+    "    print(f\"Accuracy: {acc.item()}\")\n",
+    "    \n",
     "    break"
    ]
   },
