Implement training loop
Model can now be trained using data iterator. The loop
also calculates and return loss and accuracy per epoch.

--- a/code.ipynb
+++ b/code.ipynb
@@ -255,7 +255,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "torch.Size([44, 64]) torch.Size([44, 64])\n"
+      "torch.Size([40, 64]) torch.Size([40, 64])\n"
      ]
     }
    ],
@@ -305,8 +305,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Text: who ( thus she fear same ironically the <unk> hope rent best jen 1 as because nice i harry the we the they my enrononline perfect teresa ‘’ the 46 03/21/2001 ( i maybe do this he change i the hi ok <unk> my it what from it 30 also are if i 01/26/2001 i if as i our if after debbie and these\n",
-      "Tags: PRON PUNCT ADV PRON NOUN ADJ ADV DET NUM VERB VERB ADJ PROPN X ADV SCONJ ADJ PRON PROPN DET PRON DET PRON PRON PROPN ADJ PROPN PUNCT DET NUM NUM PUNCT PRON ADV AUX PRON PRON VERB PRON DET INTJ INTJ NUM PRON PRON PRON ADP PRON NUM ADV AUX SCONJ PRON NUM PRON SCONJ ADP PRON PRON SCONJ ADP PROPN CCONJ DET\n"
+      "Text: agel ed you jan 2 what thanks thanks the again larry sufaat a \" adding are maybe <unk> paul thank husbands what meditation what note philippines then 8 notice what kathy he recall you are i i << it i edit cures wonderful he $ so lemelpe@nu.com it please newer also satan limerick it when pubs i 100 let what every they if simply\n",
+      "Tags: PROPN PROPN PRON PROPN X DET NOUN NOUN DET ADV PROPN PROPN DET PUNCT VERB AUX ADV NUM PROPN VERB NOUN PRON NOUN DET NOUN PROPN ADV X NOUN PRON PROPN PRON VERB PRON AUX PRON PRON PUNCT PRON PRON NOUN VERB ADJ PRON SYM ADV X PRON INTJ ADJ ADV PROPN PROPN PRON ADV PROPN PRON NUM VERB PRON DET PRON SCONJ ADV\n"
      ]
     }
    ],
@@ -844,18 +844,26 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 34,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Features.shape: torch.Size([50, 64])\n",
-      "Labels.shape: torch.Size([50, 64])\n",
-      "Predictions.shape: torch.Size([50, 64, 18])\n",
-      "Loss: 2.8818650245666504\n",
-      "Accuracy: 0.0032959789969027042\n"
+      "Features.shape: torch.Size([59, 64])\n",
+      "Labels.shape: torch.Size([59, 64])\n",
+      "Predictions.shape: torch.Size([59, 64, 18])\n",
+      "Loss: 2.8584671020507812\n",
+      "Accuracy: 0.0005560189019888639\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "d:\\Projects\\POS_Tagging\\venv\\lib\\site-packages\\torch\\nn\\_reduction.py:42: UserWarning: size_average and reduce args will be deprecated, please use reduction='mean' instead.\n",
+      "  warnings.warn(warning.format(ret))\n"
      ]
     }
    ],
@@ -878,6 +886,52 @@
     "    print(f\"Accuracy: {acc.item()}\")\n",
     "    \n",
     "    break"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Part 3: Training Mechanism"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "The training mechanism is basically two steps per epoch.\n",
+    "\n",
+    "1. **Training step**: Go through the entire training dataset in batches. Feed and train the model using said batches.\n",
+    "2. **Validation step**: Check how the model performs after each training step. Don't train the model on this dataset. This is just to judge how well the model does in unknown data."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 35,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from src.utils.loops import train_loop"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 36,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(0.7183584677321571, 0.8128239271172788)"
+      ]
+     },
+     "execution_count": 36,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "train_loop(model, udpos.train_dataloader())"
    ]
   },
   {
