--- a/code.ipynb
+++ b/code.ipynb
@@ -255,7 +255,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "torch.Size([40, 64]) torch.Size([40, 64])\n"
+      "torch.Size([62, 64]) torch.Size([62, 64])\n"
      ]
     }
    ],
@@ -305,8 +305,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Text: agel ed you jan 2 what thanks thanks the again larry sufaat a \" adding are maybe <unk> paul thank husbands what meditation what note philippines then 8 notice what kathy he recall you are i i << it i edit cures wonderful he $ so lemelpe@nu.com it please newer also satan limerick it when pubs i 100 let what every they if simply\n",
-      "Tags: PROPN PROPN PRON PROPN X DET NOUN NOUN DET ADV PROPN PROPN DET PUNCT VERB AUX ADV NUM PROPN VERB NOUN PRON NOUN DET NOUN PROPN ADV X NOUN PRON PROPN PRON VERB PRON AUX PRON PRON PUNCT PRON PRON NOUN VERB ADJ PRON SYM ADV X PRON INTJ ADJ ADV PROPN PROPN PRON ADV PROPN PRON NUM VERB PRON DET PRON SCONJ ADV\n"
+      "Text: thank that they you will service i sorry when this vince have i it because lorie www are will 3 we the and <unk> tiffany i from the a an i i power there most sorry <unk> juan margaret aquarius the it game little sounds thank absolute we we we john that we like you mark the criminal if take he five \" one\n",
+      "Tags: VERB DET PRON PRON AUX NOUN PRON INTJ ADV DET PROPN VERB PRON PRON ADP X PROPN AUX AUX X PRON DET CCONJ X PROPN PRON SCONJ DET DET DET PRON PRON NOUN PRON ADJ ADJ NOUN PROPN PROPN PROPN DET PRON NOUN ADV VERB VERB ADJ PRON PRON PRON PROPN DET PRON ADP PRON PROPN DET ADJ SCONJ VERB PRON NUM PUNCT NUM\n"
      ]
     }
    ],
@@ -851,11 +851,11 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Features.shape: torch.Size([59, 64])\n",
-      "Labels.shape: torch.Size([59, 64])\n",
-      "Predictions.shape: torch.Size([59, 64, 18])\n",
-      "Loss: 2.8584671020507812\n",
-      "Accuracy: 0.0005560189019888639\n"
+      "Features.shape: torch.Size([70, 64])\n",
+      "Labels.shape: torch.Size([70, 64])\n",
+      "Predictions.shape: torch.Size([70, 64, 18])\n",
+      "Loss: 2.8674864768981934\n",
+      "Accuracy: 0.00977426115423441\n"
      ]
     },
     {
@@ -911,35 +911,76 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "from src.utils.loops import train_loop"
+    "from src.utils.loops import train_epochs"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 36,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "(0.7183584677321571, 0.8128239271172788)"
-      ]
-     },
-     "execution_count": 36,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
-    "train_loop(model, udpos.train_dataloader())"
+    "udpos = UDPOS()\n",
+    "model = PosTagger(num_inputs=len(udpos.TEXT.vocab),\n",
+    "                  embedding_dim=100,\n",
+    "                  num_hiddens=64,\n",
+    "                  num_outputs=len(udpos.UD_TAGS.vocab),\n",
+    "                  bidirectional=True,\n",
+    "                  num_layers=1,\n",
+    "                  padding_idx=udpos.TEXT.vocab[udpos.TEXT.pad_token])"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 37,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Epoch: 01 in (36.30) secs\n",
+      "\tTrain Loss: 0.771 | Train Acc: 84.51%\n",
+      "\t Val. Loss: 1.260 |  Val. Acc: 66.52%\n",
+      "Epoch: 02 in (35.75) secs\n",
+      "\tTrain Loss: 0.228 | Train Acc: 93.31%\n",
+      "\t Val. Loss: 0.827 |  Val. Acc: 77.41%\n",
+      "Epoch: 03 in (35.72) secs\n",
+      "\tTrain Loss: 0.149 | Train Acc: 95.54%\n",
+      "\t Val. Loss: 0.642 |  Val. Acc: 80.64%\n",
+      "Epoch: 04 in (35.56) secs\n",
+      "\tTrain Loss: 0.106 | Train Acc: 96.80%\n",
+      "\t Val. Loss: 0.544 |  Val. Acc: 83.42%\n",
+      "Epoch: 05 in (35.40) secs\n",
+      "\tTrain Loss: 0.082 | Train Acc: 97.52%\n",
+      "\t Val. Loss: 0.480 |  Val. Acc: 85.25%\n",
+      "Epoch: 06 in (35.20) secs\n",
+      "\tTrain Loss: 0.068 | Train Acc: 97.98%\n",
+      "\t Val. Loss: 0.435 |  Val. Acc: 86.41%\n",
+      "Epoch: 07 in (35.14) secs\n",
+      "\tTrain Loss: 0.057 | Train Acc: 98.30%\n",
+      "\t Val. Loss: 0.399 |  Val. Acc: 87.71%\n"
+     ]
+    },
+    {
+     "ename": "KeyboardInterrupt",
+     "evalue": "",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mKeyboardInterrupt\u001b[0m                         Traceback (most recent call last)",
+      "\u001b[1;32m~\\AppData\\Local\\Temp\\ipykernel_10216\\896275724.py\u001b[0m in \u001b[0;36m<module>\u001b[1;34m\u001b[0m\n\u001b[1;32m----> 1\u001b[1;33m \u001b[0mlosses\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0maccuracies\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mtrain_epochs\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mmodel\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mudpos\u001b[0m\u001b[1;33m,\u001b[0m \u001b[1;36m10\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m",
+      "\u001b[1;32md:\\Projects\\POS_Tagging\\src\\utils\\loops.py\u001b[0m in \u001b[0;36mtrain_epochs\u001b[1;34m(model, data, epochs)\u001b[0m\n\u001b[0;32m    105\u001b[0m         \u001b[0mstart_time\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mtime\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mtime\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m    106\u001b[0m \u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m--> 107\u001b[1;33m         \u001b[0mtrain_loss\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mtrain_acc\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mtrain_loop\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mmodel\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mdata\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mtrain_dataloader\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m    108\u001b[0m         \u001b[0mval_loss\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mval_acc\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mevaluation_loop\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mmodel\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mdata\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mval_dataloader\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m    109\u001b[0m \u001b[1;33m\u001b[0m\u001b[0m\n",
+      "\u001b[1;32md:\\Projects\\POS_Tagging\\src\\utils\\loops.py\u001b[0m in \u001b[0;36mtrain_loop\u001b[1;34m(model, iterator)\u001b[0m\n\u001b[0;32m     44\u001b[0m \u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m     45\u001b[0m         \u001b[1;31m# Back propagation\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m---> 46\u001b[1;33m         \u001b[0mloss\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mbackward\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m     47\u001b[0m \u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m     48\u001b[0m         \u001b[1;31m# Update parameters\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n",
+      "\u001b[1;32md:\\Projects\\POS_Tagging\\venv\\lib\\site-packages\\torch\\_tensor.py\u001b[0m in \u001b[0;36mbackward\u001b[1;34m(self, gradient, retain_graph, create_graph, inputs)\u001b[0m\n\u001b[0;32m    487\u001b[0m             )\n\u001b[0;32m    488\u001b[0m         torch.autograd.backward(\n\u001b[1;32m--> 489\u001b[1;33m             \u001b[0mself\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mgradient\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mretain_graph\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mcreate_graph\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0minputs\u001b[0m\u001b[1;33m=\u001b[0m\u001b[0minputs\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m    490\u001b[0m         )\n\u001b[0;32m    491\u001b[0m \u001b[1;33m\u001b[0m\u001b[0m\n",
+      "\u001b[1;32md:\\Projects\\POS_Tagging\\venv\\lib\\site-packages\\torch\\autograd\\__init__.py\u001b[0m in \u001b[0;36mbackward\u001b[1;34m(tensors, grad_tensors, retain_graph, create_graph, grad_variables, inputs)\u001b[0m\n\u001b[0;32m    197\u001b[0m     Variable._execution_engine.run_backward(  # Calls into the C++ engine to run the backward pass\n\u001b[0;32m    198\u001b[0m         \u001b[0mtensors\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mgrad_tensors_\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mretain_graph\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mcreate_graph\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0minputs\u001b[0m\u001b[1;33m,\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m--> 199\u001b[1;33m         allow_unreachable=True, accumulate_grad=True)  # Calls into the C++ engine to run the backward pass\n\u001b[0m\u001b[0;32m    200\u001b[0m \u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m    201\u001b[0m def grad(\n",
+      "\u001b[1;31mKeyboardInterrupt\u001b[0m: "
+     ]
+    }
+   ],
+   "source": [
+    "losses, accuracies = train_epochs(model, udpos, 10)"
+   ]
   }
  ],
  "metadata": {
